--- a/app/views/layinghens/user-testing/likert-scale.html
+++ b/app/views/layinghens/user-testing/likert-scale.html
@@ -221,6 +221,12 @@
                     </a>
                 </li>
 
+                <li>
+                    <a href="/layinghens/current/eligibility/features/number-of-birds">
+                        Solar and project cost calculation
+                    </a>
+                </li>
+
             </ul>
             
         </div>
