changes 36 - 39 from change log

--- a/app/views/layinghens/current/eligibility/veranda/pop-holes.html
+++ b/app/views/layinghens/current/eligibility/veranda/pop-holes.html
@@ -28,7 +28,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the internal ' + poultryType + ' housing have lockable pop holes for the hens to enter the veranda through?',
+                            text: 'Will the internal ' + poultryType + ' housing have closable pop holes for the hens to enter the veranda through?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
