--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -407,7 +407,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Monitoring poultry management data
+                            Collecting and storing poultry management data
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="data?from-scoring=true">
@@ -427,7 +427,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Monitoring additional environmental data
+                            Collecting and storing additional environmental data
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="environment-data?from-scoring=true">
