start page changes

--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -46,6 +46,9 @@
         <li>
           will do the grant-funded work in England
         </li>
+         <li>
+          have 1,000 or more laying hens or pullets
+        </li>
       </ul>
 
       <h2 class="govuk-heading-m">
@@ -53,53 +56,36 @@
       </h2>
 
       <p>
-        You can apply for grant funding to replace or refurbish existing laying hen or pullet housing, or to add a veranda to laying hen or pullet housing.
+        You can apply for up to 40% of the estimated project costs of either: 
+      </p>
+
+       <ul class="govuk-list govuk-list--bullet">
+        <li>
+          refurbishing or replacing existing laying hen or pullet housing with new multi-tier aviary housing
+        </li>
+        <li>
+          adding a veranda to existing laying hen or pullet housing
+        </li>
+      </ul>
+
+      <p>
+        If you are applying for housing grant funding, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of energy output per 1,000 birds. 
       </p>
 
       <p>
-        If you are applying for grant funding to replace or refurbish housing, you can also apply for grant funding to add a solar photovoltaic (PV) system to the housing.
+        You can apply for grant funding for multiple house or veranda projects. You must submit an application for each project. You cannot apply for grant funding for both housing and veranda projects. 
+      </p>
+
+      <p>
+        The maximum total grant amount each business can apply for is £500,000 for housing projects (including solar PV system costs) or £100,000 for veranda projects. The Rural Payments Agency (RPA) will award the grant funding for verandas on a first come, first served basis.
       </p>
       
       <p>
-        You must submit an application for each project. You can apply for grant funding for either housing projects or veranda projects.
-      </p>
-
-      <p>
-        You can apply for up to 40% of estimated costs of:
-      </p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          replacing or refurbishing laying hen or pullet housing
-        </li>
-        <li>
-          adding a veranda to existing housing
-        </li>
-      </ul>
-
-      <p>
-        Funding for a solar PV system will be capped at the lowest of these 2 amounts, either:
-      </p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          the cost of 75m<sup>2</sup> of the bird floorspace or
-        </li>
-        <li>
-          25% of the invoice price for purchase and installation of the solar PV system
-        </li>
-      </ul>
-
-      <p>
-        For laying hen or pullet housing and a solar PV system, the maximum grant you can apply for is £500,000. The minimum grant is £15,000 (40% of £37,500).
-      </p>
-
-      <p>
-        For adding a laying hen or pullet veranda only, the maximum grant you can apply for is £80,000. The minimum grant is £15,000 (40% of £37,500). The RPA will award the grant funding for verandas on a first-come first- served basis.
+        For housing projects, the minimum grant is £15,000 (40% of £37,500). For veranda projects, the minimum grant is £5,000 (40% of £12,500). 
       </p>
 
       {{ govukInsetText ({
-        text: 'If your project is eligible, you will be able to submit your online application to the Rural Payments Agency (RPA).'
+        text: 'If your project is eligible, you will be able to submit your online application to the RPA.'
       }) }}
 
       {{ govukButton({
@@ -118,16 +104,13 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          information about your business (for example, number of employees, turnover)
+          information about the project (for example, planning permission requirements, insulation type, ventilation system capacity, multi-tier system information, veranda specifications)
         </li>
         <li>
-          information about the project (for example, building structure)
+          an estimate of the total cost of the project
         </li>
         <li>
-          a list of the items you’d like to buy for the project
-        </li>
-        <li>
-          an estimate of the total cost of the items
+          information about your business (for example, county parish holding (CPH) number, number of employees, turnover)
         </li>
       </ul>
 
