--- a/app/views/layinghens/current/eligibility/interruption.html
+++ b/app/views/layinghens/current/eligibility/interruption.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    We have reached the limit of applications for veranda grant funding
+    Check if your project is eligible for a grant
 {% endblock %}
 
 {% block content %}
